--- a/app/views/partners/new.html.slim
+++ b/app/views/partners/new.html.slim
@@ -19,11 +19,11 @@
               = text_field_tag "partner[slug]", nil, value: @partner.slug, class: "form-control"
             .form-group
               = label_tag :partner_connector_types
-              ul
+              ul.list-group
                 - Edwig::Partner.connector_types.each do |connector|
-                  li
-                    = check_box_tag "partner[connector_types][]", connector, @partner.connector_types.include?(connector)
-                    = label_tag connector
+                  li.list-group-item
+                    = check_box_tag "partner[connector_types][]", connector, @partner.connector_types.include?(connector), class: "check-icon"
+                    = label_tag nil, connector
             .form-group
               = label_tag :partner_settings
               #partner_setting_template.hidden
