--- a/app/views/partners/new.html.slim
+++ b/app/views/partners/new.html.slim
@@ -1,8 +1,5 @@
 / PageHeader
-= pageheader 'map-marker',
-        t('partners.create.title'),
-        '',
-        ''
+= pageheader 'map-marker', t('partners.create.title')
 / PageContent
 .page_content
   .row
@@ -12,31 +9,4 @@
   .container-fluid
     .row
       .col-lg-8.col-lg-offset-2.col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1
-        = errors_full_messages(@partner.errors)
-
-        = form_tag referential_partners_path(@referential.id) do
-          .col-lg-12
-            .form-group
-              = label_tag :partner_slug
-              = text_field_tag "partner[slug]", nil, value: @partner.slug, class: "form-control"
-            .form-group
-              = label_tag :partner_connector_types
-              ul.list-group
-                - Edwig::Partner.connector_types.each do |connector|
-                  li.list-group-item
-                    = check_box_tag "partner[connector_types][]", connector, @partner.connector_types.include?(connector), class: "check-icon"
-                    = label_tag nil, connector
-            .form-group
-              = label_tag :partner_settings
-              #partner_setting_template.hidden
-                .form-group
-                  = text_field_tag "partner[settings][index][key]", nil, class: "form-control", :placeholder => "settings key",  disabled: true
-                  = text_field_tag "partner[settings][index][value]", nil, class: "form-control", :placeholder => "settings value", disabled: true
-                .form-group
-                  button.btn.btn-danger.remove_partner_setting type="button"
-                    span.glyphicon.glyphicon-minus aria-hidden="true"
-              button.btn.btn-primary.pull-right#add_partner_setting type="button"
-                span.glyphicon.glyphicon-plus aria-hidden="true"
-            .form-group
-              button.btn.btn-primary[type="submit"]
-                = t('partners.create.submit')
+        = render 'form'
