--- a/app/views/referentials/new.html.slim
+++ b/app/views/referentials/new.html.slim
@@ -1,8 +1,5 @@
 / PageHeader
-= pageheader 'map-marker',
-        t('referentials.create.title'),
-        '',
-        ''
+= pageheader 'map-marker', t('referentials.create.title')
 / PageContent
 .page_content
   .row
@@ -12,16 +9,4 @@
   .container-fluid
     .row
       .col-lg-8.col-lg-offset-2.col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1
-        = errors_full_messages(@referential.errors)
-        = form_tag referentials_path, method: :post do
-          .row
-            .col-lg-12
-            .form-group
-              = label_tag :slug
-              = text_field_tag "referential[slug]", nil, value: @referential.slug, class: "form-control"
-            .form-group
-              = label_tag :tokens
-              = text_field_tag "referential[token_list]", nil, value: @referential.token_list, class: "form-control"
-            .form-group
-              button.btn.btn-primary[type="submit"]
-                = t('referentials.create.submit')
+        = render 'form'
