--- a/app/views/referentials/show.html.slim
+++ b/app/views/referentials/show.html.slim
@@ -58,3 +58,4 @@
                       = link_to referential_partner_path(@referential.id, partner.id), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"} do
                         span.fa.fa-trash.mr-xs
                         | Supprimer
+  = link_to(t('partners.save.title'), db_save_referential_partners_path(@referential.id), method: :post, class: 'btn btn-link', data: {confirm: t('partners.save.confirm')})
