--- a/app/views/referentials/index.html.slim
+++ b/app/views/referentials/index.html.slim
@@ -5,6 +5,14 @@
 - header_params << link_to(t('referentials.create.title'), new_referential_path, class: 'btn btn-default')
 = pageheader(*header_params)
 
+  .row.mb-sm
+    .col-lg-12.text-right
+      = link_to db_save_referentials_path,
+              method: :post,
+              data: {confirm: t('referentials.save.confirm')},
+              class: 'btn btn-primary' do
+        = t('referentials.save.title')
+
 / PageContent
 .page_content
   .container-fluid
@@ -46,4 +54,3 @@
                       = link_to referential_path(referential.id), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"} do
                         span.fa.fa-trash.mr-xs
                         | Supprimer
-  = link_to(t('referentials.save.title'), db_save_referentials_path, method: :post, class: 'btn btn-link', data: {confirm: t('referentials.save.confirm')})
