--- a/app/views/partners/index.html.slim
+++ b/app/views/partners/index.html.slim
@@ -18,13 +18,13 @@
           thead
             tr
               th
-                = t('partners.slug')
+                = Edwig::Partner.human_attribute_name(:slug)
               th
-                = t('partners.attributes.operational_status')
+                = Edwig::Partner.human_attribute_name(:operational_status)
               th
-                = t('partners.attributes.service_started_at')
+                = Edwig::Partner.human_attribute_name(:service_started_at)
               th
-                = t('partners.attributes.connector_types')
+                = Edwig::Partner.human_attribute_name(:connector_types)
               th
           tbody
           - @partners.each do |partner|
@@ -42,8 +42,8 @@
                   ul.dropdown-menu
                     li
                       = link_to edit_referential_partner_path(@referential.id, partner.id), class: 'btn btn-default' do
-                        | Editer
+                        = t('actions.edit')
                     li.delete-action
                       = link_to referential_partner_path(@referential.id, partner.id), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"} do
                         span.fa.fa-trash.mr-xs
-                        | Supprimer
+                        = t('actions.delete')
