--- a/app/views/referentials/index.html.slim
+++ b/app/views/referentials/index.html.slim
@@ -23,13 +23,13 @@
           thead
             tr
               th
-                = t('attributes.slug')
+                = Edwig::Referential.human_attribute_name(:slug)
               th
-                = t('attributes.attributes.next_reload_at')
+                = Edwig::Referential.human_attribute_name(:next_reload_at)
               th
-                = t('referentials.attributes.token')
+                = Edwig::Referential.human_attribute_name(:token)
               th
-                = t('referentials.attributes.partner')
+                = Edwig::Referential.human_attribute_name(:partner)
               th
           tbody
           - @referentials.each do |referential|
@@ -46,11 +46,13 @@
                     - if referential.tokens.present?
                       li.show-action
                         = link_to referential_path referential.id do
-                          | Voir
+                          span
+                            = t('actions.show')
                       li.edit-action
                         = link_to edit_referential_path referential.id do
-                          | Editer
+                          span
+                            = t('actions.edit')
                     li.delete-action
                       = link_to referential_path(referential.id), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"} do
                         span.fa.fa-trash.mr-xs
-                        | Supprimer
+                        = t('actions.delete')
