--- a/app/views/referentials/show.html.slim
+++ b/app/views/referentials/show.html.slim
@@ -56,12 +56,14 @@
                   .btn.dropdown-toggle data-toggle="dropdown"
                     span.fa.fa-cog
                   ul.dropdown-menu
-                    li
-                      = link_to referential_partner_path(@referential.id, partner.id), class: 'btn btn-default' do
-                        = t('actions.show')
-                    li
-                      = link_to edit_referential_partner_path(@referential.id, partner.id), class: 'btn btn-default' do
-                        = t('actions.edit')
+                    li.show-action
+                      = link_to referential_partner_path(@referential.id, partner.id) do
+                        span
+                          = t('actions.show')
+                    li.show-action
+                      = link_to edit_referential_partner_path(@referential.id, partner.id) do
+                        span
+                          = t('actions.edit')
                     li.delete-action
                       = link_to referential_partner_path(@referential.id, partner.id), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"} do
                         span.fa.fa-trash.mr-xs
