Manage Referential#settings in model. Referential#model_reload_at in form. Refs #5438

--- a/app/views/referentials/_form.html.slim
+++ b/app/views/referentials/_form.html.slim
@@ -11,5 +11,8 @@
       = label_tag :tokens
       = text_field_tag "referential[token_list]", nil, value: @referential.token_list, class: "form-control"
     .form-group
+      = label_tag :model_reload_at
+      = text_field_tag "referential[model_reload_at]", nil, value: @referential.model_reload_at, class: "form-control"
+    .form-group
       button.btn.btn-primary[type="submit"]
         = t("referentials.#{@referential.persisted? ? 'edit' : 'create'}.submit")
