--- a/app/views/partners/edit.html.slim
+++ b/app/views/partners/edit.html.slim
@@ -1,8 +1,5 @@
 / PageHeader
-= pageheader 'map-marker',
-        t('partners.edit.title'),
-        '',
-        ''
+= pageheader 'map-marker', t('.title'), '', ''
 / PageContent
 .page_content
   .row
