--- a/app/views/referentials/edit.html.slim
+++ b/app/views/referentials/edit.html.slim
@@ -1,5 +1,5 @@
 / PageHeader
-= pageheader 'map-marker', t('referentials.edit.title')
+= pageheader 'map-marker', t('.title')
 / PageContent
 .page_content
   .row
