--- a/app/views/partners/show.html.slim
+++ b/app/views/partners/show.html.slim
@@ -1,6 +1,6 @@
 / PageHeader
-- header_params = ['map-marker',
-        t('attributes.partner') + " " + @partner.slug,]
+- header_params = ['map-marker', t('.title', slug: @partner.slug), '' ]
+- header_params << link_to(t('partners.edit.title'), edit_referential_partner_path(@referential.id, @partner.id), class: 'btn btn-default')
 = pageheader(*header_params)
 
 / PageContent
@@ -12,9 +12,9 @@
   .container-fluid
     .row
       .col-lg-6.col-md-6.col-sm-12.col-xs-12
-        = definition_list t('partners.informations'),
+        = definition_list t('.informations'),
                 Edwig::Partner.human_attribute_name(:slug) => @partner.slug,
                 Edwig::Partner.human_attribute_name(:operational_status) => @partner.operationnal_status,
-                Edwig::Partner.human_attribute_name(:service_started_at) => @partner.service_started_at,
+                Edwig::Partner.human_attribute_name(:service_started_at) => @partner.service_started_at ? l(@partner.service_started_at) : '-',
                 Edwig::Partner.human_attribute_name(:connector_types) => @partner.connector_types.join(", "),
                 Edwig::Partner.human_attribute_name(:settings) => @partner.settings.to_a.join(", ")
