--- a/app/views/referentials/show.html.slim
+++ b/app/views/referentials/show.html.slim
@@ -1,8 +1,6 @@
 / PageHeader
-- header_params = ['map-marker',
-        t('referentials.title') + @referential.slug,
-        '']
-- header_params << link_to(t('partners.create.title'), new_referential_partner_path(@referential.id), class: 'btn btn-default')
+- header_params = ['map-marker', t('.title', slug: @referential.slug), '']
+- header_params << link_to(t('partners.new.title'), new_referential_partner_path(@referential.id), class: 'btn btn-default')
 = pageheader(*header_params)
 
   .row.mb-sm
@@ -22,11 +20,12 @@
   .container-fluid
     .row
       .col-lg-6.col-md-6.col-sm-12.col-xs-12
-        = definition_list t('referentials.informations'),
+        = definition_list t('.informations'),
                 Edwig::Referential.human_attribute_name(:id) => @referential.id,
                 Edwig::Referential.human_attribute_name(:slug) => @referential.slug,
                 Edwig::Referential.human_attribute_name(:token) => @referential.token_list,
-                Edwig::Referential.human_attribute_name(:next_reload_at) => @referential.next_reload_at,
+                Edwig::Referential.human_attribute_name(:model_reload_at) => @referential.model_reload_at,
+                Edwig::Referential.human_attribute_name(:next_reload_at) => @referential.next_reload_at ? l(@referential.next_reload_at) : '-',
                 Edwig::Referential.human_attribute_name(:partners) => @referential.partner_ids.count
     .row
       .col-lg-12
@@ -34,22 +33,22 @@
           thead
             tr
               th
-                = Edwig::Referential.human_attribute_name(:slug)
+                = Edwig::Partner.human_attribute_name(:slug)
               th
-                = Edwig::Referential.human_attribute_name(:operational_status)
+                = Edwig::Partner.human_attribute_name(:operational_status)
               th
-                = Edwig::Referential.human_attribute_name(:service_started_at)
+                = Edwig::Partner.human_attribute_name(:service_started_at)
               th
-                = Edwig::Referential.human_attribute_name(:connector_types)
+                = Edwig::Partner.human_attribute_name(:connector_types)
               th
           tbody
           - @partners.each do |partner|
             tr
-              td = partner.slug
+              td = link_to partner.slug, referential_partner_path(@referential.id, partner.id)
               td
                 .btn-group
                   .btn.btn-circle class="btn-#{partner.operationnal_status}"
-              td = partner.service_started_at
+              td = partner.service_started_at ? l(partner.service_started_at) : '-'
               td = partner.connector_types.count
               td.actions
                 .btn-group
@@ -65,6 +64,6 @@
                         span
                           = t('actions.edit')
                     li.delete-action
-                      = link_to referential_partner_path(@referential.id, partner.id), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"} do
+                      = link_to referential_partner_path(@referential.id, partner.id), method: :delete, data: {confirm: t('partners.actions.confirm_delete')} do
                         span.fa.fa-trash.mr-xs
                         = t('actions.delete')
